Fixed overflow issue with Reddit component. Added flex container to resources page, with placeholders for books and tools

--- a/client/src/components/Reddit/Reddit.css
+++ b/client/src/components/Reddit/Reddit.css
@@ -10,3 +10,11 @@
 .link {
   font-size: 20px;
 }
+
+.truncate {
+  padding:0px;
+  margin:0px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
